fixes #2407 allow clicking on section header to expand/collapse
and hide “Show/Hide expired keys” when the user has no expired keys

--- a/themes/standard_pages/theme.css
+++ b/themes/standard_pages/theme.css
@@ -646,6 +646,10 @@ p.error-message,
   overflow: hidden;
 }
 
+.profile-section #show_expired_list {
+  display: none;
+}
+
 .profile-section #api_key_list_expired .api_expiration {
   text-overflow: unset;
   max-width: unset;
@@ -706,6 +710,10 @@ p.error-message,
 .profile-section #api_id_key,
 .profile-section #api_secret_key {
   font-family: monospace !important;
+}
+
+.profile-section .display-section {
+  cursor: pointer;
 }
 
 /* Modal */
